--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="box">
+        <div class="eye"></div>
+        <div class="eye"></div>
+    </div>
 </body>
 </html>
