linked the scriptsheet to index.html

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
         <div class="eye"></div>
         <div class="eye"></div>
     </div>
+    <script src="main.js"></script>
 </body>
 </html>
