--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="box">
+    <div class="boxs">
         <div class="eye"></div>
         <div class="eye"></div>
     </div>
